--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-react": "^3.0.0",
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.32.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
